# relay

./: .gitattributes  .gitignore  Cargo.toml  README.md  README.zh.md  install.ps1  install.sh  product.md  roadmap.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  sync-homebrew.yml
npm/relay/: package.json
pkg/brew/: relay.rb
scripts/: compute-sha256.sh  release.sh  sync-brew.sh
src/: cli.rs  discover.rs  error.rs  lib.rs  main.rs  path_setup.rs  sync.rs  ui.rs
src/config/: mod.rs  paths.rs  schema.rs
src/doctor/: mod.rs
src/registry/: mod.rs
src/runner/: mod.rs
src/shim/: mod.rs
src/snippet/: mod.rs
tests/: cli.rs  registry.rs  shim.rs
