[package]
name = "relay"
version = "0.0.5"
edition = "2021"
rust-version = "1.75"
description = "Secure cross-platform command router"
license = "MIT"
repository = "https://github.com/ffgenius/relay"
readme = "README.md"
keywords = ["cli", "command", "router", "alias", "shim"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
indicatif = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
which = "6"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
